--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1108,115 +1108,118 @@ user.dir.videos=Videos
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
- wizard.basic_setup.computer_name=Name of this computer
- wizard.basic_setup.default_folder_name=Synchronized Files
- wizard.basic_setup.lan_only=LAN only
- wizard.basic_setup.language_restart=Language (requires restart)
- wizard.basic_setup.networking=Connect to
- wizard.basic_setup.private=LAN and Internet
- wizard.basic_setup.title=Basic Setup
- wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
- wizard.basic_setup.upload.title=Unlimited connection speed
- wizard.choose_disk_location.backup_by_online_storage=Backup by Online Storage
- wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
- wizard.choose_disk_location.create_desktop_shortcut=Create desktop shortcut
- wizard.choose_disk_location.directory_no_write=WARNING\: This directory cannot be written to
- wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does not exist
- wizard.choose_disk_location.directory_size=Directory size {0}
- wizard.choose_disk_location.maual_sync=Manual synchronization
- wizard.choose_disk_location.options=Please select required options
- wizard.choose_disk_location.select=Please select the directory
- wizard.choose_disk_location.select_file=Select file
- wizard.choose_disk_location.send_invitation=Send invitation
- wizard.choose_disk_location.target_dir=Target directory
- wizard.choose_disk_location.title=Select Directory
- wizard.choose_multi_disk_location.select=Please select required directories
- wizard.choose_multi_disk_location.select_additional=Please select additional directories
- wizard.choose_multi_disk_location.title=Select Directories
- wizard.control.back.description=Go to previous wizard step
- wizard.control.back=Back
- wizard.control.cancel.description=Cancel this wizard
- wizard.control.cancel=Cancel
- wizard.control.finish.description=Finish this wizard task
- wizard.control.finish=Finish
- wizard.control.help.description=Show online help (Alt-8)
- wizard.control.help=Help
- wizard.control.next.description=Go to next wizard step
- wizard.control.next=Next
- wizard.create_folder.failed=Failed to create PowerFolder.
- wizard.create_folder.title=Creating PowerFolder
- wizard.create_folder.working=Creating PowerFolder, please wait.
- wizard.finish.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
- wizard.finish.os_login_title=Online Storage Login Successful
- wizard.folder_invitation.intro=You have received an invitation from {0}
- wizard.folder_invitation.title=Folder Invitation
- wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the inital backup\nmay take some time on big folders.
- wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
- wizard.folder_online_storage.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
- wizard.folder_online_storage.failure_title=Online Storage Error
- wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
- wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
- wizard.folder_online_storage.warning_message=Do you really want to stop backing up this folder online?
- wizard.folder_online_storage.warning_stop_backing=Stop backing up
- wizard.folder_online_storage.warning_title=Online Storage
- wizard.folder_setup.title=Configure Folder
- wizard.load_invitation.choose_file=Choose the invitation file
- wizard.load_invitation.select=Select invitation file
- wizard.load_invitation.select_file=Please select invitation file
- wizard.login_online_storage.connecting=Connecting...
- wizard.login_online_storage.remember_password=Remember password
- wizard.login_online_storage.setup_default=Setup default synchronized folder.
- wizard.multi_folder_setup.title=Configure Folders
- wizard.multi_folder_setup.no_name.title=No name
- wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
- wizard.pfwizard.title=Folder Wizard
- wizard.project_name.choose=Choose project name
- wizard.project_name.enter_name=Enter the name of your project
- wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
- wizard.send_invitations.invitation_text=Enter a message for the receiver
- wizard.send_invitations.invitation_text_sample=
- wizard.send_invitations.join=Invitation files are required to join a folder.
- wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
- wizard.send_invitations.over_powerfolder=Send via PowerFolder now
- wizard.send_invitations.save_to_file=Save as file
- wizard.send_invitations.send_by_mail.cc_me=Send to my email address
- wizard.send_invitations.send_by_mail=Send by mail
- wizard.send_invitations.send_invitation=Send invitation
- wizard.send_invitations.send_success=Invitation sent
- wizard.send_invitations.send_success_info=You successfully sent the invitation.
- wizard.send_invitations.title=Save Invitation
- wizard.setup_success=Setup successfully
- wizard.success_join=You have successfully joined the folder\!
- wizard.webservice.enter_account=Please enter your account details to login
- wizard.webservice.learn_more=What is PowerFolder Online Storage?
- wizard.webservice.login=Login
- wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
- wizard.webservice.mirror_setup=Backup Folder by Online Storage
- wizard.webservice.password=Password
- wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
- wizard.webservice.unmirror_setup=Remove Folder from Online Storage
- wizard.webservice.username=Email
- wizard.what_to_do.backp.select=Please select the directory which should be backed up
- wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
- wizard.what_to_do.backup_folder=Backup a folder
- wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
- wizard.what_to_do.custom_sync=Advanced setup
- wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\!\n
- wizard.what_to_do.folder_host_success=You successfully set up a host folder\!\n
- wizard.what_to_do.host_pcs.select=Please select the directory which should be the host
- wizard.what_to_do.host_pcs_join=Other computers can join this folder now
- wizard.what_to_do.host_work.tip=Choose this option to host files or share them with other computers
- wizard.what_to_do.host_work=Share/Send a folder
- wizard.what_to_do.invite.select_local=Please select local target directory for the files
- wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
- wizard.what_to_do.load_invite=Open invitation file
- wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
- wizard.what_to_do.open_online_documentation=Open online documentation
- wizard.what_to_do.pcs_join=Other computers can join this folder now
- wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
- wizard.what_to_do.sync_pcs.select=Please select the directory which should be synchronized
- wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\!\n
- wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize files with other computers
- wizard.what_to_do.synchronized_folder=Synchronize computer
- wizard.what_to_do.title=What do you want to do?
+wizard.basic_setup.computer_name=Name of this computer
+wizard.basic_setup.default_folder_name=Synchronized Files
+wizard.basic_setup.lan_only=LAN only
+wizard.basic_setup.language_restart=Language (requires restart)
+wizard.basic_setup.networking=Connect to
+wizard.basic_setup.private=LAN and Internet
+wizard.basic_setup.title=Basic Setup
+wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+wizard.basic_setup.upload.title=Unlimited connection speed
+wizard.choose_disk_location.backup_by_online_storage=Backup by Online Storage
+wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
+wizard.choose_disk_location.create_desktop_shortcut=Create desktop shortcut
+wizard.choose_disk_location.directory_no_write=WARNING\: This directory cannot be written to
+wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does not exist
+wizard.choose_disk_location.directory_size=Directory size {0}
+wizard.choose_disk_location.maual_sync=Manual synchronization
+wizard.choose_disk_location.options=Please select required options
+wizard.choose_disk_location.select=Please select the directory
+wizard.choose_disk_location.select_file=Select file
+wizard.choose_disk_location.send_invitation=Send invitation
+wizard.choose_disk_location.target_dir=Target directory
+wizard.choose_disk_location.title=Select Directory
+wizard.choose_multi_disk_location.select=Please select required directories
+wizard.choose_multi_disk_location.select_additional=Please select additional directories
+wizard.choose_multi_disk_location.title=Select Directories
+wizard.control.back.description=Go to previous wizard step
+wizard.control.back=Back
+wizard.control.cancel.description=Cancel this wizard
+wizard.control.cancel=Cancel
+wizard.control.finish.description=Finish this wizard task
+wizard.control.finish=Finish
+wizard.control.help.description=Show online help (Alt-8)
+wizard.control.help=Help
+wizard.control.next.description=Go to next wizard step
+wizard.control.next=Next
+wizard.create_folder.failed=Failed to create PowerFolder.
+wizard.create_folder.title=Creating PowerFolder
+wizard.create_folder.working=Creating PowerFolder, please wait.
+wizard.finish.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
+wizard.finish.os_login_title=Online Storage Login Successful
+wizard.folder_invitation.intro=You have received an invitation from {0}
+wizard.folder_invitation.title=Folder Invitation
+wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the inital backup\nmay take some time on big folders.
+wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
+wizard.folder_online_storage.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
+wizard.folder_online_storage.failure_title=Online Storage Error
+wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
+wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
+wizard.folder_online_storage.warning_message=Do you really want to stop backing up this folder online?
+wizard.folder_online_storage.warning_stop_backing=Stop backing up
+wizard.folder_online_storage.warning_title=Online Storage
+wizard.folder_setup.title=Configure Folder
+wizard.load_invitation.choose_file=Choose the invitation file
+wizard.load_invitation.select=Select invitation file
+wizard.load_invitation.select_file=Please select invitation file
+wizard.login_online_storage.connecting=Connecting...
+wizard.login_online_storage.remember_password=Remember password
+wizard.login_online_storage.setup_default=Setup default synchronized folder.
+wizard.multi_folder_setup.title=Configure Folders
+wizard.multi_folder_setup.no_name.title=No name
+wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
+wizard.pfwizard.title=Folder Wizard
+wizard.project_name.choose=Choose project name
+wizard.project_name.enter_name=Enter the name of your project
+wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
+wizard.select_online_storage.title=Select Online Storage folders
+wizard.send_invitations.invitation_text=Enter a message for the receiver
+wizard.send_invitations.invitation_text_sample=
+wizard.send_invitations.join=Invitation files are required to join a folder.
+wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
+wizard.send_invitations.over_powerfolder=Send via PowerFolder now
+wizard.send_invitations.save_to_file=Save as file
+wizard.send_invitations.send_by_mail.cc_me=Send to my email address
+wizard.send_invitations.send_by_mail=Send by mail
+wizard.send_invitations.title=Send invitation
+wizard.send_invitations.send_success=Invitation sent
+wizard.send_invitations.send_success_info=You successfully sent the invitation.
+wizard.send_invitations.select=Save Invitation
+wizard.setup_success=Setup successfully
+wizard.success_join=You have successfully joined the folder\!
+wizard.webservice.enter_account=Please enter your account details to login
+wizard.webservice.learn_more=What is PowerFolder Online Storage?
+wizard.webservice.login=Login
+wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
+wizard.webservice.mirror_setup=Backup Folder by Online Storage
+wizard.webservice.password=Password
+wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
+wizard.webservice.unmirror_setup=Remove Folder from Online Storage
+wizard.webservice.username=Email
+wizard.what_to_do.backp.select=Please select the directory which should be backed up
+wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
+wizard.what_to_do.backup_folder=Backup a folder
+wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
+wizard.what_to_do.custom_sync=Advanced setup
+wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\!\n
+wizard.what_to_do.folder_host_success=You successfully set up a host folder\!\n
+wizard.what_to_do.host_pcs.select=Please select the directory which should be the host
+wizard.what_to_do.host_pcs_join=Other computers can join this folder now
+wizard.what_to_do.host_work.tip=Choose this option to host files or share them with other computers
+wizard.what_to_do.host_work=Share/Send a folder
+wizard.what_to_do.invite.select_local=Please select local target directory for the files
+wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
+wizard.what_to_do.load_invite=Open invitation file
+wizard.what_to_do.join_online.tip=Choose this option locally join an Online Storage folder
+wizard.what_to_do.join_online=Join Online Storage folder
+wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
+wizard.what_to_do.open_online_documentation=Open online documentation
+wizard.what_to_do.pcs_join=Other computers can join this folder now
+wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
+wizard.what_to_do.sync_pcs.select=Please select the directory which should be synchronized
+wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\!\n
+wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize files with other computers
+wizard.what_to_do.synchronized_folder=Synchronize computer
+wizard.what_to_do.title=What do you want to do?
 
