--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1174,6 +1174,7 @@ wizard.project_name.choose=Choose project name
 wizard.project_name.enter_name=Enter the name of your project
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Storage folders
+wizard.select_online_storage.info=Please select folders to join locally
 wizard.send_invitations.invitation_text=Enter a message for the receiver
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=Invitation files are required to join a folder.
