#1383 - info if no candidate folders exist.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1214,6 +1214,8 @@ wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an i
 wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.join_online.tip=Choose this option locally join an Online Storage folder
 wizard.what_to_do.join_online=Join Online Storage folder
+wizard.what_to_do.no_os_title=No folders
+wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
 wizard.what_to_do.open_online_documentation=Open online documentation
 wizard.what_to_do.pcs_join=Other computers can join this folder now
