--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -686,7 +686,6 @@ general.local_copy_at=Local copy at
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
 general.message=Message
-general.messages=Messages
 general.minutes=Minute(s)
 general.monday=Monday
 general.more.lower_case=more
@@ -1214,7 +1213,7 @@ wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an i
 wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.join_online.tip=Choose this option locally join an Online Storage folder
 wizard.what_to_do.join_online=Join Online Storage folder
-wizard.what_to_do.no_os_title=No folders
+wizard.error_title=Wizard error
 wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
 wizard.what_to_do.open_online_documentation=Open online documentation
