#1383 - recycle and shortcut checkboxes

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1173,7 +1173,9 @@ wizard.project_name.choose=Choose project name
 wizard.project_name.enter_name=Enter the name of your project
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Storage folders
-wizard.select_online_storage.info=Please select folders to join locally
+wizard.select_online_storage.info=Please select Online Storage folders to join locally
+wizard.select_online_storage.recycle_bin.text=Use recycle bin
+wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.send_invitations.invitation_text=Enter a message for the receiver
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=Invitation files are required to join a folder.
@@ -1214,7 +1216,7 @@ wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.join_online.tip=Choose this option locally join an Online Storage folder
 wizard.what_to_do.join_online=Join Online Storage folder
 wizard.error_title=Wizard error
-wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders
+wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders available
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
 wizard.what_to_do.open_online_documentation=Open online documentation
 wizard.what_to_do.pcs_join=Other computers can join this folder now
