--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1228,3 +1228,5 @@ wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize file
 wizard.what_to_do.synchronized_folder=Synchronize computer
 wizard.what_to_do.title=What do you want to do?
 
+wizard.multi_online_storage_setup.local_folder_location=Local folder location
+wizard.multi_online_storage_setup.select_directory=Select directory
