#1383 - singleton join button

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -111,6 +111,10 @@ action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
 
+action_join_online_storage.description=Locally join this Online Storage folder
+action_join_online_storage.key=J
+action_join_online_storage.name=Join
+
 action_online_storage.description=Open this online storage folder in browser
 action_online_storage.key=O
 action_online_storage.name=Online Storage
