--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -24,6 +24,7 @@ action_edit_ignore.icon=icons/Edit.png
 action_edit_transfer_mode.icon=icons/Edit.png
 action_find_computers.icon=icons/FindComputers.gif
 action_invite_friend.icon=icons/Invite.gif
+action_join_online_storage.icon=icons/LocalAndOnlineFolder.png
 action_new_folder.icon=icons/NewFolder.png
 action_online_storage.icon=icons/OnlineFolder.png
 action_open_about_box.icon=icons/information.png
