--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1166,7 +1166,7 @@ wizard.folder_setup.title=Configure Folder
 wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.select=Select invitation file
 wizard.load_invitation.select_file=Please select invitation file
-wizard.login_online_storage.connecting=Connecting...
+wizard.login_online_storage.connecting=Connecting to PowerFolder. Please wait...
 wizard.login_online_storage.remember_password=Remember password
 wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.multi_folder_setup.title=Configure Folders
