#1384 - reoder basic and OS wizards

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1196,8 +1196,9 @@ wizard.send_invitations.select=Save Invitation
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details to login
+wizard.webservice.enter_account_optional=Please enter your account details to login (optional)
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
-wizard.webservice.login=Login
+wizard.webservice.login=Online Storage Login
 wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
 wizard.webservice.mirror_setup=Backup Folder by Online Storage
 wizard.webservice.password=Password
