#1384 - add 'no thanks' link - fixes #1384

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -183,6 +183,10 @@ action_restore_file.description=Undelete file
 action_restore_file.key=R
 action_restore_file.name=Restore
 
+action_skip_login.description=You may configure Online Storage later
+action_skip_login.key=N
+action_skip_login.name=No thanks, I don't want to use the Online Storage
+
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
