#1288 - show error if recycle bin not made during create.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -598,7 +598,8 @@ folder.check_path_length.text=The combined length of the path to the file and th
 folder.check_path_length.title=Path maybe to long
 folder.info_tip=Contains files and folders managed by PowerFolder
 
-folder_create.dialog.backup_error.text=Unable to setup the Online Storage to backup the PowerFolder
+folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
+folder_create.recycle_error.text=Unable to create recycle bin for folder {0}
 folder_create.dialog.select_file.text=Select file
 folder_create.progress.text=Creating PowerFolder '{0}'
 
@@ -1150,9 +1151,9 @@ wizard.control.help.description=Show online help (Alt-8)
 wizard.control.help=Help
 wizard.control.next.description=Go to next wizard step
 wizard.control.next=Next
-wizard.create_folder.failed=Failed to create PowerFolder.
-wizard.create_folder.title=Creating PowerFolder
-wizard.create_folder.working=Creating PowerFolder, please wait.
+wizard.create_folder.problems=There were problems creating the folder(s).
+wizard.create_folder.title=Creating Folder(s)
+wizard.create_folder.working=Creating folder(s), please wait.
 wizard.finish.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
 wizard.finish.os_login_title=Online Storage Login Successful
 wizard.folder_invitation.intro=You have received an invitation from {0}
