#1440 - context menus for expandable views.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -27,6 +27,7 @@ action_invite_friend.icon=icons/Invite.gif
 action_join_online_storage.icon=icons/LocalAndOnlineFolder.png
 action_new_folder.icon=icons/NewFolder.png
 action_online_storage.icon=icons/OnlineFolder.png
+action_most_recent_changes.icon=icons/Updates.gif
 action_open_about_box.icon=icons/information.png
 action_open_chat.icon=icons/Chat.gif
 action_open_debug_information.icon=icons/Bug.png
