--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -119,6 +119,10 @@ action_online_storage.description=Open this online storage folder in browser
 action_online_storage.key=O
 action_online_storage.name=Online Storage
 
+action_most_recent_changes.description=Show most recent changes
+action_most_recent_changes.key=R
+action_most_recent_changes.name=Recent Changes
+
 action_open_about_box.description=Show information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
@@ -140,7 +144,7 @@ action_open_file.key=O
 action_open_file.name=Open
 
 action_open_files_information.description=Open files information for this folder
-action_open_files_information.key=S
+action_open_files_information.key=F
 action_open_files_information.name=Files
 
 action_open_invitation_received_wizard.description=Open invitation received wizard
@@ -515,7 +519,6 @@ exp_folder_view.no_recycled=Recycle bin not used
 exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last synchronized: {0}
 exp_folder_view.estimated_synchronized=Estimated synchronized: {0}
-exp_folder_view.sync_date_label.tip=Display most recent changes
 
 file_details_panel.availability=Availability
 file_details_panel.available=Available
