#1447 - add expanded popup with open folder option

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -36,6 +36,7 @@ action_open_files_information.icon=icons/Files.png
 action_open_members_information.icon=icons/NodeFriendConnected.gif
 action_open_preferences.icon=icons/Preferences.png
 action_open_settings_information.icon=icons/Settings.png
+action_open_explorer.icon=icons/Directory.gif
 action_preview_folder.icon=icons/PreviewFolder.png
 action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
