--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -119,6 +119,10 @@ action_online_storage.description=Open this online storage folder in browser
 action_online_storage.key=O
 action_online_storage.name=Online Storage
 
+action_open_explorer.description=Open this folder in your operating system's file explorer
+action_open_explorer.key=O
+action_open_explorer.name=Open Folder
+
 action_most_recent_changes.description=Show most recent changes
 action_most_recent_changes.key=R
 action_most_recent_changes.name=Recent Changes
