--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -592,6 +592,8 @@ files_tab.combo.new_files_only=New files only
 files_tab.combo.tool_tip=Select files to display
 files_tab.filter_by_file_name.hint=Filter by file name
 files_tab.filter_by_file_name.tool_tip=Filter results by file name
+files_tab.flat_view.text=Flat view
+files_tab.flat_view.tip=Flatten view of folder directory structure
 
 folders_tab.no_folders_available=No folders available
 computers_tab.no_computers_available=No computers available
