#1417 - add 'use online storage' entry

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -953,6 +953,8 @@ preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.silent_throttle=Silentmode bandwidth throttle
+preferences.dialog.online_storage.text=Use Online Storage
+preferences.dialog.online_storage.tip=Setup PowerFolder to use Online Storage
 preferences.dialog.start_with_windows=Start PowerFolder with Windows
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
