#1451 - main frame translucency percentage

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -967,6 +967,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.translucent_frame=Make main frame translucent
+preferences.dialog.translucent_text=Translucency
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
