--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -719,6 +719,7 @@ general.save.key=S
 general.save=Save
 general.search=Search
 general.seconds=Second(s)
+general.seconds.lower=second(s)
 general.size=Size
 general.sunday=Sunday
 general.synchonisation=Synchronization
@@ -895,6 +896,10 @@ preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder progr
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
+preferences.dialog.dialogs.notification_delay=Notification delay
+preferences.dialog.dialogs.notifications=Notifications
+preferences.dialog.dialogs.notification.preview.title=Preview
+preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
 preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyn_dns.title=DynDNS
