refs #1353 client deployment

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -336,6 +336,18 @@ pro.wizard.activation.no_key_info_2=activate PowerFolder Pro.
 # Everything Else #
 ###################
 
+config.loader.dialog.error=Error: {0}
+config.loader.dialog.error.server.missing=Server host missing in client configuration file
+config.loader.dialog.error.generic=Unable to load configuration
+config.loader.dialog.error.config.notfound=Client configuration file not found
+config.loader.dialog.error.address.invalid=Incomplete or invalid address
+config.loader.dialog.error.config.empty=Client configuration file empty
+config.loader.dialog.error.host.notfound=Host not found
+config.loader.dialog.loaded=Loaded {0} settings
+config.loader.dialog.title=PowerFolder: Select storage provider
+config.loader.dialog.info=Please enter the web address of your storage provider:
+config.loader.dialog.exit=Exit
+
 about_dialog.check_for_updates.key=C
 about_dialog.check_for_updates.text=Check
 about_dialog.check_for_updates.tips=Check for PowerFolder updates
@@ -348,6 +360,7 @@ about_dialog.power_folder.build_time=Build time\: {0}
 about_dialog.power_folder.max=Max memory\: {0}MB
 about_dialog.power_folder.text=Version\: {0}
 about_dialog.power_folder.used=Used memory\: {0}MB
+about_dialog.power_folder.distribution=Dist: {0}
 about_dialog.send_bug_report.key=R
 about_dialog.send_bug_report.text=Report
 about_dialog.send_bug_report.tips=Send a bug report to PowerFolder
