refs #1353 client deployment

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -733,6 +733,7 @@ general.save=Save
 general.search=Search
 general.seconds=Second(s)
 general.seconds.lower=second(s)
+general.server=Server
 general.size=Size
 general.sunday=Sunday
 general.synchonisation=Synchronization
