refs #1353 client deployment

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -347,6 +347,7 @@ config.loader.dialog.loaded=Loaded {0} settings
 config.loader.dialog.title=PowerFolder: Select storage provider
 config.loader.dialog.info=Please enter the web address of your storage provider:
 config.loader.dialog.exit=Exit
+config.loader.dialog.skip=Skip
 
 about_dialog.check_for_updates.key=C
 about_dialog.check_for_updates.text=Check
