Notification delay uses slider.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -733,7 +733,6 @@ general.save.key=S
 general.save=Save
 general.search=Search
 general.seconds=Second(s)
-general.seconds.lower=second(s)
 general.server=Server
 general.size=Size
 general.sunday=Sunday
@@ -912,7 +911,7 @@ preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
 preferences.dialog.dialogs.notification_translucency=Translucency
-preferences.dialog.dialogs.notification_delay=Delay
+preferences.dialog.dialogs.notification_delay=Delay (seconds)
 preferences.dialog.dialogs.notifications=Notifications
 preferences.dialog.dialogs.notification.preview.title=Preview
 preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
