--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -912,6 +912,7 @@ preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
 preferences.dialog.dialogs.notification_translucency=Translucency
 preferences.dialog.dialogs.notification_delay=Delay (seconds)
+preferences.dialog.dialogs.preview=Preview
 preferences.dialog.dialogs.notifications=Notifications
 preferences.dialog.dialogs.notification.preview.title=Preview
 preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
