--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -332,9 +332,9 @@ pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.no_key_info_1=Please login with an existing account to
 pro.wizard.activation.no_key_info_2=activate PowerFolder Pro.
 
-###################
-# Everything Else #
-###################
+##############################
+# Config Loader Translations #
+##############################
 
 config.loader.dialog.error=Error: {0}
 config.loader.dialog.error.server.missing=Server host missing in client configuration file
@@ -348,6 +348,10 @@ config.loader.dialog.title=PowerFolder: Select storage provider
 config.loader.dialog.info=Please enter the web address of your storage provider:
 config.loader.dialog.exit=Exit
 config.loader.dialog.skip=Skip
+
+###################
+# Everything Else #
+###################
 
 about_dialog.check_for_updates.key=C
 about_dialog.check_for_updates.text=Check
@@ -997,6 +1001,7 @@ preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_recycle_bin=Use recycle bin (default)
 preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.use_zip_on_lan=Use ZIP compression on LAN
+preferences.dialog.user_interface=User Interface
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 
