#1471 - begin rework of TM selector.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -63,10 +63,6 @@ action_stop_online_storage.description=Stop backing up this folder to Online Sto
 action_stop_online_storage.key=S
 action_stop_online_storage.name=Stop
 
-action_create_transfer_mode.description=Create a custom transfer mode
-action_create_transfer_mode.key=C
-action_create_transfer_mode.name=Create
-
 action_delete_file.description=Delete file
 action_delete_file.key=D
 action_delete_file.name=Delete
@@ -74,10 +70,6 @@ action_delete_file.name=Delete
 action_delete_folder.description=Delete this folder
 action_delete_folder.key=D
 action_delete_folder.name=Delete
-
-action_delete_transfer_mode.description=Delete this transfer mode
-action_delete_transfer_mode.key=D
-action_delete_transfer_mode.name=Delete
 
 action_details.description=Display the details panel
 action_details.key=D
@@ -91,9 +83,9 @@ action_edit_ignore.description=Edit a pattern in the ignore list
 action_edit_ignore.key=E
 action_edit_ignore.name=Edit
 
-action_edit_transfer_mode.description=Edit this transfer mode
-action_edit_transfer_mode.key=E
-action_edit_transfer_mode.name=Edit
+action_configure_transfer_mode.description=Configure this transfer mode
+action_configure_transfer_mode.key=C
+action_configure_transfer_mode.name=Configure
 
 action_find_computers.description=Search for other computers
 action_find_computers.key=F
