#1471 - delete for TM selector.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -18,6 +18,7 @@ action_connect.icon=icons/ConnectBright.png
 action_delete_file.icon=icons/Delete.gif
 action_delete_folder.icon=icons/Delete.gif
 action_details.icon=icons/Details.gif
+action_delete_transfer_mode.icon=icons/Delete.gif
 action_download_file.icon=icons/Download.png
 action_edit_ignore.icon=icons/Edit.png
 action_find_computers.icon=icons/FindComputers.gif
