--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -55,6 +55,10 @@ action_connect.description=Manually connect to a PowerFolder computer
 action_connect.key=C
 action_connect.name=Connect
 
+action_delete_transfer_mode.description=Delete this transfer mode
+action_delete_transfer_mode.key=D
+action_delete_transfer_mode.name=Delete
+
 action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.key=B
 action_backup_online_storage.name=Backup
