Some translation fixes.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -283,7 +283,7 @@ pro.security.secure=secure
 pro.security.securitysettings=Security Settings
 pro.wizard.activation.activating=Activating PowerFolder Pro
 pro.wizard.activation.agree_gtcs=I agree to the General Terms and Conditions
-pro.wizard.activation.already_account=I'm already registerd
+pro.wizard.activation.already_account=I'm already registered
 pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.computers_allowed=Computers allowed\:
 pro.wizard.activation.computers_found=Computers found\:
@@ -322,7 +322,7 @@ pro.wizard.activation.thanks_purchase=Thank you for purchasing PowerFolder Pro.
 pro.wizard.activation.try_again=Try again
 pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
 pro.wizard.activation.update_service_account=Update Service Account
-pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
+pro.wizard.activation.update_service_info=Automatically get the latest features and bug fixes.
 pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.no_key_info_1=Please login with an existing account to
@@ -1028,7 +1028,7 @@ select_invitation.text2=Never give out invitation files to untrusted people.
 send_invitation.ask_emailaddres.message=Email address to send invitation to
 send_invitation.ask_emailaddres.title=Email address
 send_invitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
-send_invitation.example_email_address=Enter email of receipient
+send_invitation.example_email_address=Enter email of recipient
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.select_computer.text=Select computer
 send_invitation.subject=Invitation to the PowerFolder '{0}'
@@ -1193,7 +1193,7 @@ wizard.finish.os_login_text=The Online Storage is now correctly setup.\nYou may 
 wizard.finish.os_login_title=Online Storage Login Successful
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
-wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the inital backup\nmay take some time on big folders.
+wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 wizard.folder_online_storage.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
 wizard.folder_online_storage.failure_title=Online Storage Error
