Defer 'warnings' to the home tab for action by the user, refs #1022

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -231,6 +231,10 @@ action_pause_sync.description=Pause all synchronization tasks
 action_pause_sync.key=P
 action_pause_sync.name=Pause
 
+action_activate_warning.description=Display any warnings
+action_activate_warning.key=W
+action_activate_warning.name=Warning
+
 ##################
 # Transfer Modes #
 ##################
@@ -749,6 +753,7 @@ general.yesterday=Yesterday
 
 home_tab.computers=Computer(s)
 home_tab.files_available=File(s) available
+home_tab.new_warnings=Warning(s)
 home_tab.files_downloaded=File(s) downloaded
 home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
