--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -738,6 +738,7 @@ general.save=Save
 general.search=Search
 general.seconds=Second(s)
 general.server=Server
+general.server_only=Server only
 general.size=Size
 general.sunday=Sunday
 general.synchonisation=Synchronization
