'Stay on top' option - works nicely with translucent main frame

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -994,6 +994,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.translucent_frame=Make main frame translucent
+preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.translucent_text=Translucency
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use NAT traversal
