--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -900,6 +900,7 @@ plugin_enable.name=Enable
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advPort=Port
 preferences.dialog.advanced.title=Advanced
+preferences.dialog.auto_cleanup=Auto-cleanup (days)
 preferences.dialog.base_dir=Base directory for folders
 preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
@@ -996,6 +997,7 @@ preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.translucent_text=Translucency
+preferences.dialog.ui.title=User Interface
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
@@ -1004,7 +1006,6 @@ preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_recycle_bin=Use recycle bin (default)
 preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.use_zip_on_lan=Use ZIP compression on LAN
-preferences.dialog.user_interface=User Interface
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 
