Don't created desktop links to PowerFolders

--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -4,6 +4,7 @@ nodeid=randomstringBart_relay
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 net.openport=false
+use.pf.icon=false
 nick=Bart
 random-port=false
 port=3457
