--- a/src/test-resources/ControllerBartUI.config
+++ b/src/test-resources/ControllerBartUI.config
@@ -3,6 +3,7 @@
 nodeid=randomstringBartUI
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
+use.pf.icon=false
 nick=BartUI
 random-port=false
 port=3457
