--- a/src/test-resources/ControllerHomer.config
+++ b/src/test-resources/ControllerHomer.config
@@ -4,6 +4,7 @@ nodeid=randomstringHomer
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 net.openport=false
+use.pf.icon=false
 nick=Homer
 random-port=false
 port=8835
