--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -4,6 +4,7 @@ nodeid=randomstringLisa
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 net.openport=false
+use.pf.icon=false
 nick=Lisa
 disableui=true
 uploadlimit=0
