--- a/src/test-resources/ControllerMaggie.config
+++ b/src/test-resources/ControllerMaggie.config
@@ -4,6 +4,7 @@ nodeid=randomstringMaggie
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 net.openport=false
+use.pf.icon=false
 nick=Maggie
 random-port=false
 port=34661
