--- a/src/test-resources/ControllerMarge.config
+++ b/src/test-resources/ControllerMarge.config
@@ -4,6 +4,7 @@ nodeid=randomstringMarge
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 net.openport=false
+use.pf.icon=false
 nick=Marge
 random-port=false
 port=8453
