--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,6 @@
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaSilverMoon.jar"/>
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaSkyMetallic.jar"/>
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaWhiteVision.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-2.4.0.jar" sourcepath="C:/work/libraries/lucene-2.4.0-src/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
