--- a/build.xml
+++ b/build.xml
@@ -79,6 +79,8 @@ For creation of the installer:
 			<include name="looks-2.1.4.jar" />
 			<include name="uif_lite-2.0.4.jar" />
 			<include name="validation-2.0.1.jar" />
+			<include name="lucene-core-2.4.0.jar" />
+
             <include name="synthetica/commons-logging-1.1.jar" />
             <include name="synthetica/flexdock.jar" />
             <include name="synthetica/swing-worker-1.1.jar" />
