Initial scan text for folder, fixes #1491

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -537,6 +537,7 @@ exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
 exp_folder_view.recycled={0} file(s) ({1}) in recycle bin
+exp_folder_view.not_yet_scanned=Not yet scanned
 exp_folder_view.no_recycled=Recycle bin not used
 exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last synchronized: {0}
