--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaSkyMetallic.jar"/>
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaWhiteVision.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.4.0.jar" sourcepath="C:/work/libraries/lucene-2.4.0-src/src"/>
+	<classpathentry kind="lib" path="lib/h2-1.1.109.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
