Add notification enable to systray, fixes #1462

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1100,6 +1100,9 @@ systray.hide=Hide
 systray.powerfolder=PowerFolder v{0}
 systray.show=Show
 systray.sync_all=Sync Folders
+systray.notifications=Notifications
+systray.notifications.chat=Show Chat Notifications
+systray.notifications.system=Show System Notifications
 systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.in_sync=in sync
